[TSK-95] add Integration tests for repos and controllers (#7)
Co-authored-by: Roman <you@example.com>